--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <br>
     <br>
 
-    <b><font size="4">Human-to-Human Interaction Detectio</font></b>
+    <b><font size="4">Human-to-Human Interaction Detection</font></b>
     <br>
     Zhenhua Wang, <b>Kaining Ying</b> (Student 2nd author, Advisor 1st author), Jiajun Meng, Jifeng Ning, Cong Bai. Preprint 2023
     <br>
@@ -55,7 +55,7 @@
 
     <b><font size="4">Self-supervised Enhancement for Named Entity Disambiguation via Multimodal Graph Convolution</font></b>
     <br>
-    Pengfei Zhou, <b>Kaining Ying</b> (equal contributation), Zhenhua Wang, Dongyan Guo, Cong Bai. TNNLS 2022
+    Pengfei Zhou, <b>Kaining Ying</b> (equal contribution), Zhenhua Wang, Dongyan Guo, Cong Bai. TNNLS 2022
     <br>
     <a href="https://ieeexplore.ieee.org/document/9774860/">PAPER</a> |
     <a href="https://github.com/LanceZPF/NNED_MMGraph">CODE</a>
@@ -72,7 +72,7 @@
     <br>
     
     <h2>Professional Service</h2>
-    <p>Reviewer of TMM, ICME2023 and ACM MM2023.</p>
+    <p>Reviewer of TMM, ICME 2023 and ACM MM 2023.</p>
     
     <h2>Honors and Awards</h2>
     <ul>
