--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="wuxi2023.jpg" alt="Example Image" width="800" height="600">
     <p>CS Master@ZJUT supervised by <a href="https://cie.nwsuaf.edu.cn/szdw/fjs/2022110082/index.htm">Prof. Zhenhua Wang</a>. </p>
     <p>Email: <b>kaining[dot]ying[dot]cv[at]gmail[dot]com</b></p>
-    <p><a href="https://scholar.google.com/citations?user=MDvaeqUAAAAJ&hl=zh-CN">Google Scholar</a> | <a href="https://github.com/KainingYing/ISDA">GitHub</a></p>
+    <p><a href="https://scholar.google.com/citations?user=MDvaeqUAAAAJ&hl=zh-CN">Google Scholar</a> | <a href="https://github.com/KainingYing">GitHub</a></p>
     
     <h2>Research Interests</h2>
     <ul>
