--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h2>Publications</h2>
     <b><font size="4">CTVIS: Consistent Training for Online Video Instance Segmentation</font></b>
     <br>
-    <b>Kaining Ying</b>, Qing Zhong, Weian Mao, Zhenhua Wang, Lin Wu, Hao Chen, Yifan Liu, Chenxiang Fan, Yunzhi Zhuge. ICCV 2023 Under review (2wa, 1bor)
+    <b>Kaining Ying</b>, Qing Zhong, Weian Mao, Zhenhua Wang, Lin Wu, Hao Chen, Yifan Liu, Chenxiang Fan, Yunzhi Zhuge. ICCV 2023
     <br>
     <a href="https://www.bilibili.com/video/BV1Y54y1K7kJ/?spm_id_from=333.999.0.0">DEMO</a>
     <br>
