--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h2>Publications</h2>
     <b><font size="4">CTVIS: Consistent Training for Online Video Instance Segmentation</font></b>
     <br>
-    <b>Kaining Ying</b>, Qing Zhong, Weian Mao, Zhenhua Wang, Lin Wu, Hao Chen, Yifan Liu, Chenxiang Fan, Yunzhi Zhuge. <span style="color:orange">ICCV 2023</span>
+    <b>Kaining Ying</b>, Qing Zhong, Weian Mao, Zhenhua Wang, Lin Wu, Hao Chen, Yifan Liu, Chenxiang Fan, Yunzhi Zhuge. <span style="color:orange"><b>ICCV 2023</b></span>
     <br>
     <a href="https://www.bilibili.com/video/BV1Y54y1K7kJ/?spm_id_from=333.999.0.0">DEMO</a>
     <br>
@@ -37,7 +37,7 @@
 
     <b><font size="4">ISDA: Position-Aware Instance Segmentation with Deformable Attention</font></b>
     <br>
-    <b>Kaining Ying</b>, Zhenhua Wang, Cong Bai, Pengfei Zho. <span style="color:orange">ICASSP 2022 Oral</span>
+    <b>Kaining Ying</b>, Zhenhua Wang, Cong Bai, Pengfei Zho. <span style="color:orange"><b>ICASSP 2022 Oral</b></span>
     <br>
     <a href="https://arxiv.org/abs/2202.12251">PAPER</a> |
     <a href="https://github.com/KainingYing/ISDA">CODE</a> |
@@ -47,7 +47,7 @@
 
     <b><font size="4">Human-to-Human Interaction Detection</font></b>
     <br>
-    Zhenhua Wang, <b>Kaining Ying</b> (Student 2nd author, Advisor 1st author), Jiajun Meng, Jifeng Ning, Cong Bai. <span style="color:orange">Preprint 2023</span>
+    Zhenhua Wang, <b>Kaining Ying</b> (Student 2nd author, Advisor 1st author), Jiajun Meng, Jifeng Ning, Cong Bai. <span style="color:orange"><b>Preprint 2023</b></span>
     <br>
     <a href="https://arxiv.org/abs/2307.00464">PAPER</a>
     <br>
@@ -55,7 +55,7 @@
 
     <b><font size="4">Self-supervised Enhancement for Named Entity Disambiguation via Multimodal Graph Convolution</font></b>
     <br>
-    Pengfei Zhou, <b>Kaining Ying</b> (equal contribution), Zhenhua Wang, Dongyan Guo, Cong Bai. <span style="color:orange">TNNLS 2022</span>
+    Pengfei Zhou, <b>Kaining Ying</b> (equal contribution), Zhenhua Wang, Dongyan Guo, Cong Bai. <span style="color:orange"><b>TNNLS 2022</b></span>
     <br>
     <br>
     <a href="https://ieeexplore.ieee.org/document/9774860/">PAPER</a> |
@@ -65,7 +65,7 @@
 
     <b><font size="4">Human Interaction Understanding with Consistency-Aware Learning</font></b>
     <br>
-    Jiajun Meng, Zhenhua Wang, <b>Kaining Ying</b>, Jianhua Zhang, Dongyan Guo, Zhen Zhen, Qinfeng Shi, Shengyong Chen. <span style="color:orange">TPAMI 2023</span>
+    Jiajun Meng, Zhenhua Wang, <b>Kaining Ying</b>, Jianhua Zhang, Dongyan Guo, Zhen Zhen, Qinfeng Shi, Shengyong Chen. <span style="color:orange"><b>TPAMI 2023</b></span>
     <br>
     <a href="https://ieeexplore.ieee.org/document/10138446/">PAPER</a> |
     <a href="https://github.com/deepgogogo/CAGNet">CODE</a>
