--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Kaining Ying</h1>
     <figcaption>拍摄于VALSE无锡</figcaption>
-    <img src="wuxi2023.jpg" alt="Example Image" width="800" height="600">
+    <img src="assets/wuxi2023.jpg" alt="Example Image" width="800" height="600">
     <p>CS Master@ZJUT supervised by <a href="https://cie.nwsuaf.edu.cn/szdw/fjs/2022110082/index.htm">Prof. Zhenhua Wang</a>. </p>
     <p>Email: <b>kaining[dot]ying[dot]cv[at]gmail[dot]com</b></p>
     <p><a href="https://scholar.google.com/citations?user=MDvaeqUAAAAJ&hl=zh-CN">Google Scholar</a> | <a href="https://github.com/KainingYing">GitHub</a></p>
@@ -27,9 +27,11 @@
     </ul>
     
     <h2>Publications</h2>
+    <font size="3">* indicates equal contributions, # indicates corresponding authors</font>
+    <br>
     <b><font size="4">CTVIS: Consistent Training for Online Video Instance Segmentation</font></b>
     <br>
-    <b>Kaining Ying</b>, Qing Zhong, Weian Mao, Zhenhua Wang, Lin Wu, Hao Chen, Yifan Liu, Chenxiang Fan, Yunzhi Zhuge. <span style="color:orange"><b>ICCV 2023</b></span>
+    <b>Kaining Ying*</b>, Qing Zhong*, Weian Mao, Zhenhua Wang#, Hao Chen#, Lin Yuanbo Wu, Yifan Liu, Chenxiang Fan, Yunzhi Zhuge, Chunhua Shen. <span style="color:orange"><b>ICCV 2023</b></span>
     <br>
     <a href="https://www.bilibili.com/video/BV1Y54y1K7kJ/?spm_id_from=333.999.0.0">DEMO</a>
     <br>
@@ -37,7 +39,7 @@
 
     <b><font size="4">ISDA: Position-Aware Instance Segmentation with Deformable Attention</font></b>
     <br>
-    <b>Kaining Ying</b>, Zhenhua Wang, Cong Bai, Pengfei Zho. <span style="color:orange"><b>ICASSP 2022 Oral</b></span>
+    <b>Kaining Ying</b>, Zhenhua Wang#, Cong Bai, Pengfei Zho. <span style="color:orange"><b>ICASSP 2022 Oral</b></span>
     <br>
     <a href="https://arxiv.org/abs/2202.12251">PAPER</a> |
     <a href="https://github.com/KainingYing/ISDA">CODE</a> |
@@ -47,7 +49,7 @@
 
     <b><font size="4">Human-to-Human Interaction Detection</font></b>
     <br>
-    Zhenhua Wang, <b>Kaining Ying</b> (Student 2nd author, Advisor 1st author), Jiajun Meng, Jifeng Ning, Cong Bai. <span style="color:orange"><b>Preprint 2023</b></span>
+    Zhenhua Wang, <b>Kaining Ying#</b>, Jiajun Meng, Jifeng Ning, Cong Bai. <span style="color:orange"><b>Preprint 2023</b></span>
     <br>
     <a href="https://arxiv.org/abs/2307.00464">PAPER</a>
     <br>
@@ -55,8 +57,7 @@
 
     <b><font size="4">Self-supervised Enhancement for Named Entity Disambiguation via Multimodal Graph Convolution</font></b>
     <br>
-    Pengfei Zhou, <b>Kaining Ying</b> (equal contribution), Zhenhua Wang, Dongyan Guo, Cong Bai. <span style="color:orange"><b>TNNLS 2022</b></span>
-    <br>
+    Pengfei Zhou*, <b>Kaining Ying*</b>, Zhenhua Wang, Dongyan Guo, Cong Bai#. <span style="color:orange"><b>TNNLS 2022</b></span>
     <br>
     <a href="https://ieeexplore.ieee.org/document/9774860/">PAPER</a> |
     <a href="https://github.com/LanceZPF/NNED_MMGraph">CODE</a>
@@ -65,7 +66,7 @@
 
     <b><font size="4">Human Interaction Understanding with Consistency-Aware Learning</font></b>
     <br>
-    Jiajun Meng, Zhenhua Wang, <b>Kaining Ying</b>, Jianhua Zhang, Dongyan Guo, Zhen Zhen, Qinfeng Shi, Shengyong Chen. <span style="color:orange"><b>TPAMI 2023</b></span>
+    Jiajun Meng, Zhenhua Wang#, <b>Kaining Ying</b>, Jianhua Zhang, Dongyan Guo, Zhen Zhen, Qinfeng Shi, Shengyong Chen. <span style="color:orange"><b>TPAMI 2023</b></span>
     <br>
     <a href="https://ieeexplore.ieee.org/document/10138446/">PAPER</a> |
     <a href="https://github.com/deepgogogo/CAGNet">CODE</a>
