--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <br>
     <b>Kaining Ying*</b>, Qing Zhong*, Weian Mao, Zhenhua Wang#, Hao Chen#, Lin Yuanbo Wu, Yifan Liu, Chenxiang Fan, Yunzhi Zhuge, Chunhua Shen. <span style="color:orange"><b>ICCV 2023</b></span>
     <br>
+    <a href="https://arxiv.org/abs/2307.12616">PAPER</a>
+    <a href="https://github.com/KainingYing/CTVIS">CODE</a>
     <a href="https://www.bilibili.com/video/BV1Y54y1K7kJ/?spm_id_from=333.999.0.0">DEMO</a>
     <br>
     <br>
