--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
     <h2>Research Interests</h2>
     <ul>
+      <li><b>Multimodal-LLMs</b></li>
       <li><b>Segment Anything</b></li>
       <li>Object Detetion & Instance Segmentation</li>
       <li>Human-centric Interaction Understanding</li>
