--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
       <li><b>Multimodal-LLMs</b></li>
       <li><b>Segment Anything</b></li>
-      <li>Object Detetion & Instance Segmentation</li>
+      <li>Object Detection & Instance Segmentation</li>
       <li>Human-centric Interaction Understanding</li>
     </ul>
     
@@ -42,7 +42,7 @@
 
     <b><font size="4">ISDA: Position-Aware Instance Segmentation with Deformable Attention</font></b>
     <br>
-    <b>Kaining Ying</b>, Zhenhua Wang#, Cong Bai, Pengfei Zho. <span style="color:orange"><b>ICASSP 2022 Oral</b></span>
+    <b>Kaining Ying</b>, Zhenhua Wang#, Cong Bai, Pengfei Zhou. <span style="color:orange"><b>ICASSP 2022 Oral</b></span>
     <br>
     <a href="https://arxiv.org/abs/2202.12251">PAPER</a> |
     <a href="https://github.com/KainingYing/ISDA">CODE</a> |
@@ -69,7 +69,7 @@
 
     <b><font size="4">Human Interaction Understanding with Consistency-Aware Learning</font></b>
     <br>
-    Jiajun Meng, Zhenhua Wang#, <b>Kaining Ying</b>, Jianhua Zhang, Dongyan Guo, Zhen Zhen, Qinfeng Shi, Shengyong Chen. <span style="color:orange"><b>TPAMI 2023</b></span>
+    Jiajun Meng, Zhenhua Wang#, <b>Kaining Ying</b>, Jianhua Zhang, Dongyan Guo, Zhen Zhang, Qinfeng Shi, Shengyong Chen. <span style="color:orange"><b>TPAMI 2023</b></span>
     <br>
     <a href="https://ieeexplore.ieee.org/document/10138446/">PAPER</a> |
     <a href="https://github.com/deepgogogo/CAGNet">CODE</a>
@@ -81,6 +81,7 @@
     
     <h2>Honors and Awards</h2>
     <ul>
+      <li> 2nd Place in The 5th Large-scale Video Object Segmentation Challenge - Track 2: Video Instance Segmentation at ICCV 2023, 2023.8</li>
       <li> 2nd Place in Pixel-level Video Understanding Challenge (VPS Track) at CVPR2023, 2023.5</li>
       <li> China National Scholarship 2022 (1/306), 2022.10</li>
     </ul>
