--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <h2>Honors and Awards</h2>
     <ul>
       <li> 2nd Place in The 5th Large-scale Video Object Segmentation Challenge - Track 2: Video Instance Segmentation at ICCV 2023, 2023.8</li>
-      <li> 2nd Place in Pixel-level Video Understanding Challenge (VPS Track) at CVPR2023, 2023.5</li>
+      <li> <a href="assets/cvpr_vps_2nd.pdf">2nd Place in Pixel-level Video Understanding Challenge (VPS Track) at CVPR2023, 2023.5</a></li>
       <li> China National Scholarship 2022 (1/306), 2022.10</li>
     </ul>
 
