--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Kaining's Homepage</title>
+    <title>Kaining Ying | IIAU</title>
   </head>
   <body>
     <h1>Kaining Ying</h1>
