--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
@@ -86,6 +86,41 @@
       <li> China National Scholarship 2022 (1/306), 2022.10</li>
     </ul>
 
-    
+
   </body>
 </html>
+ -->
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+  text-align: center;
+  font-family: Times New Roman, Times, serif;
+}
+</style>
+</head>
+<body>
+
+<h1>Kaining Ying</h1>
+
+<img src="kainingying.github.io/assets/wuxi2023.jpg" alt="Example Image" width="800" height="600">
+
+<p>A computer vision researcher. </p>
+
+<p>Focus on MLLMs and video segementation. </p>
+
+<!-- <p>University of Example</p> -->
+
+<p>Email: kaining.ying.cv@gmail.com</p>
+
+<p><a href="kainingying.github.io/assets/cv_main.pdf">CV</a>, <a href="https://scholar.google.com/citations?user=MDvaeqUAAAAJ&hl=zh-CN">Google Scholar</a></p>
+
+
+
+
+
+</body>
