--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <title>Kaining Ying | IIAU</title>
 <style>
 body {
   text-align: center;
@@ -107,7 +109,7 @@ body {
 
 <h1>Kaining Ying</h1>
 
-<img src="kainingying.github.io/assets/wuxi2023.jpg" alt="Example Image" width="800" height="600">
+<img src="assets/wuxi2023.jpg" alt="Example Image" width="800" height="600">
 
 <p>A computer vision researcher. </p>
 
@@ -117,7 +119,7 @@ body {
 
 <p>Email: kaining.ying.cv@gmail.com</p>
 
-<p><a href="kainingying.github.io/assets/cv_main.pdf">CV</a>, <a href="https://scholar.google.com/citations?user=MDvaeqUAAAAJ&hl=zh-CN">Google Scholar</a></p>
+<p><a href="assets/cv_main.pdf">CV</a>, <a href="https://scholar.google.com/citations?user=MDvaeqUAAAAJ&hl=zh-CN">Google Scholar</a></p>
 
 
 
