--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Kaining Ying | IIAU</title>
+    <title>Kaining Ying | OpenGVLab</title>
 <style>
 body {
   text-align: center;
